--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Sample quiz</string>
+    <string name="start">Começar</string>
+    <string name="answer">Responder</string>
+    <string name="fill_name_to_start">Digite seu nome abaixo e clique em começar!</string>
+    <string name="try_again">Tentar Novamente</string>
+    <string name="generic_error">Tivemos um problema em buscar as inforamções do servidor! \\n Nos perdoe!</string>
+    <string name="nest_question">próxima</string>
 </resources>
