--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="try_again">Tentar Novamente</string>
     <string name="generic_error">Tivemos um problema em buscar as inforamções do servidor! \\n Nos perdoe!</string>
     <string name="nest_question">próxima</string>
+    <string name="congrats_text">Esse foi o seu total de acertos!</string>
+    <string name="restart">Reiniciar</string>
+    <string name="result">Resultado</string>
 </resources>
